--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=DesafioForo
+
+spring.datasource.url=jdbc:mysql://localhost/desafioforo_api
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.datasource.username=root
+spring.datasource.password=
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.flyway.baseline-on-migrate=true
+
+
+server.error.include-stacktrace=never
+
+api.security.token.secret=${JWT_SECRET:123456}
